--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,8 @@ body {
 .image {
     width: 300px;
     height: 300px;
-    background-image: url('../images/gm.jpg');
+    /*background-image: url('../images/gm.jpg');*/
+    background-image: url('https://avatars.githubusercontent.com/u/62907725?v=4');
     background-position: 50% 50%;
     background-size: cover;
     background-repeat: no-repeat;
